[gd_scene load_steps=6 format=3 uid="uid://c1a31sut74bv1"]

[ext_resource type="Texture2D" uid="uid://dpbieopoi722i" path="res://assets/hunted.png" id="1"]
[ext_resource type="PackedScene" path="res://Revolver.tscn" id="2"]
[ext_resource type="Script" path="res://Player.gd" id="3"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(10, 6)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(12, 20)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("3")
max_dodge_count = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("1")

[node name="Revolver" parent="." instance=ExtResource("2")]

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("2")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("1")

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DodgeRecoverTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DodgeTimer" to="." method="_on_dodge_timer_timeout"]
[connection signal="timeout" from="DodgeRecoverTimer" to="." method="_on_dodge_recover_timer_timeout"]
